internal linking for page & social links

--- a/career.html
+++ b/career.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
   <main class="ism-v3-header__topBar show-topBar">
     <div class="container-fluid">
       <div class="row">
@@ -85,11 +84,11 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
-              <a class="dropdown-item" href="#">About ISM</a>
+              <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="#">Vision</a>
               <a class="dropdown-item" href="#">Objectives</a>
-              <a class="dropdown-item" href="#">ISM Team</a>
+              <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
               <a class="dropdown-item" href="#">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
@@ -128,28 +127,28 @@
               <a class="dropdown-item" href="#">Notice</a>
               <a class="dropdown-item" href="#">Tenders Fabs</a>
               <a class="dropdown-item" href="#">Downloads</a>
-              <a class="dropdown-item" href="#">Careers</a>
+              <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Events</a>
+            <a class="nav-link" href="/events.html">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="/gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">FAQs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="/contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
       <div class="social-part">
-        <a href="#"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="#"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="#"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="#"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
       </div>
     </nav>
   </header>
@@ -266,18 +265,18 @@
             <li><a href="#"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
             <li><a href="#"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
             <li><a href="#"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
-            <li><a href="#"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
+            <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="#"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
         </div>
         <div class="ism-footer-useful-links">
           <h5 class="mb-5">Social Media</h5>
           <ul>
-            <li><a href="#"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="#"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="#"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="#"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="#"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
