--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins'>
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
@@ -14,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/style.css">
+
 </head>
 
 <body>
@@ -84,11 +85,11 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
               <a class="dropdown-item" href="#">Our Ministers</a>
-              <a class="dropdown-item" href="#">About ISM</a>
+              <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
               <a class="dropdown-item" href="#">Vision</a>
               <a class="dropdown-item" href="#">Objectives</a>
-              <a class="dropdown-item" href="#">ISM Team</a>
+              <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
               <a class="dropdown-item" href="#">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
@@ -127,28 +128,28 @@
               <a class="dropdown-item" href="#">Notice</a>
               <a class="dropdown-item" href="#">Tenders Fabs</a>
               <a class="dropdown-item" href="#">Downloads</a>
-              <a class="dropdown-item" href="#">Careers</a>
+              <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Events</a>
+            <a class="nav-link" href="/events.html">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
+            <a class="nav-link" href="/gallery.html">Gallery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">FAQs</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact Us</a>
+            <a class="nav-link" href="/contact-us.html">Contact Us</a>
           </li>
         </ul>
       </div>
       <div class="social-part">
-        <a href="#"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="#"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="#"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="#"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
       </div>
     </nav>
   </header>
@@ -737,18 +738,18 @@
             <li><a href="#"><img src="images/footer/sitemap_icon.png" alt="">Sitemap</a></li>
             <li><a href="#"><img src="images/footer/website_policy_icon.png" alt="">Website Policies</a></li>
             <li><a href="#"><img src="images/footer/privacy_policy_icon.png" alt="">Privacy Policies</a></li>
-            <li><a href="#"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
+            <li><a href="/career.html"><img src="images/footer/careers_icon.png" alt="">Careers</a></li>
             <li><a href="#"><img src="images/footer/faq_icon.png" alt="">FAQs</a></li>
           </ul>
         </div>
         <div class="ism-footer-useful-links">
           <h5 class="mb-5">Social Media</h5>
           <ul>
-            <li><a href="#"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="#"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="#"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="#"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="#"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
