--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
-              About Us
+              About ISM
             </a>
             <div class="dropdown-menu" aria-labelledby="aboutDropdown">
-              <a class="dropdown-item" href="#">Our Ministers</a>
+          
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
-              <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
-              <a class="dropdown-item" href="#">Vision</a>
-              <a class="dropdown-item" href="#">Objectives</a>
-              <a class="dropdown-item" href="/our-team.html">ISM Team</a>
+              <a class="dropdown-item" href="#">Our Ministers</a>
+              <a class="dropdown-item" href="#">Vision and Objectives</a>
+              <a class="dropdown-item" href="/our-team.html">Our Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
               <a class="dropdown-item" href="#">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
@@ -101,9 +100,10 @@
               SemiconIndia
             </a>
             <div class="dropdown-menu" aria-labelledby="semiconDropdown">
-              <a class="dropdown-item" href="#">2024</a>
-              <a class="dropdown-item" href="#">2023</a>
-              <a class="dropdown-item" href="#">2022</a>
+              <a class="dropdown-item" href="#">About SemiconIndia</a>
+              <a class="dropdown-item" href="#">Semicon India 2024</a>
+              <a class="dropdown-item" href="#">Semicon India 2023</a>
+              <a class="dropdown-item" href="#">Semicon India 2022</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -114,8 +114,7 @@
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Semiconductor Fabs</a>
               <a class="dropdown-item" href="#">Display Fabs</a>
-              <a class="dropdown-item" href="#">Compound Semiconductors / Silicon Photonics / Sensors Fab / Discrete
-                Semiconductors Fab And Semiconductor ATMP/OSAT Facilities</a>
+              <a class="dropdown-item" href="#">Compound/ATMP/OSAT</a>
               <a class="dropdown-item" href="#">Design Linked Incentive</a>
             </div>
           </li>
@@ -126,17 +125,18 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="schemesDropdown">
               <a class="dropdown-item" href="#">Notice</a>
-              <a class="dropdown-item" href="#">Tenders Fabs</a>
+              <a class="dropdown-item" href="#">Tenders</a>
               <a class="dropdown-item" href="#">Downloads</a>
               <a class="dropdown-item" href="/career.html">Careers</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/events.html">Events</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/gallery.html">Gallery</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/events.html">Events</a>
+          </li>
+         
           <li class="nav-item">
             <a class="nav-link" href="#">FAQs</a>
           </li>
@@ -172,11 +172,8 @@
               <p class="marquee-heading"><span class="marquee-icon"><img
                     src="images/icons/announcement_icon.png"></span>Announcements :</p>
             </div>
-            <div class="col-sm-10">
-              <marquee>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis veniam facilis amet.
-                Itaque omnis quo et, incidunt non nostrum eos illo ducimus cumque sint. Accusamus totam quam modi
-                explicabo
-                ab.
+            <div class="col-sm-10 align-content-end">
+              <marquee>SEMICON INDIA 2024 - Positioning India as a Trusted Partner in the Global Semiconductor Supply Chain.
               </marquee>
             </div>
           </div>
@@ -227,9 +224,10 @@
                 style="height:40px; width:40px;"></div>
             <div class="notification-text align-content-center">Revised Guidelines for effective functioning of the
               Modified scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors Fab. 11/10/2024
-              <span class="notification-date"><a href="#">Read More<span><img src="./images/arrow-btn_icon.png"
-                      alt=""></span></a></span>
+              <span class="notification-date"></span>
             </div>
+            <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt=""
+              style="height:40px; width:40px;"></div>
           </div>
         </div>
         <div class="col-12">
@@ -237,9 +235,10 @@
             <div class="notification-icon"><img src="images/notification_icon.png" alt=""
                 style="height:40px; width:40px;"></div>
             <div class="notification-text align-content-center">Guidelines for Modified Scheme for setting up of Display
-              Fabs in India. 11/10/2024 <span class="notification-date"><a href="#">Read More <span><img
-                      src="./images/arrow-btn_icon.png" alt=""></span></a></span>
+              Fabs in India. 11/10/2024 <span class="notification-date"></span>
             </div>
+            <div class="notification-icon ml-auto"><img src="images/icons/read_more_icon.png" alt=""
+              style="height:40px; width:40px;"></div>
           </div>
         </div>
       </div>
@@ -413,12 +412,12 @@
   <section class="journey-section p-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col pt-5">
+        <div class="col-5 pt-5">
           <p class="main-heading text-blk"><span><img src="images/icons/journey_icon.png"></span>JOURNEY</p>
           <p class="sub-heading-blk">Through our Lenses</p>
           <h1 class="title">Welcome to New India!</h1>
         </div>
-        <div class="col">
+        <div class="col-7">
           <div class="thumbnail-container">
             <iframe allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
               allowfullscreen="" frameborder="0" id="i_video"
@@ -508,8 +507,11 @@
               class="img-fluid br-8">
             <div class="event-content  py-3">
               <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-              <p>July 28 - July 30, 2023</p>
-              <p>Gandhinagar, Gujarat</p>
+              <!-- <div class="notification-icon">
+                <img src="images/notification_icon.png" alt="" style="height:40px; width:40px;">
+              </div> -->
+              <p><span class=""><img src="images/icons/calendar_icon.png" alt="" style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+              <p><span class=""><img src="images/icons/location_icon.png" alt="" style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
             </div>
           </div>
         </div>
@@ -519,8 +521,8 @@
               class="img-fluid br-8">
             <div class="event-content  py-3">
               <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-              <p>July 28 - July 30, 2023</p>
-              <p>Gandhinagar, Gujarat</p>
+              <p><span class=""><img src="images/icons/calendar_icon.png" alt="" style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+              <p><span class=""><img src="images/icons/location_icon.png" alt="" style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
             </div>
           </div>
         </div>
@@ -530,8 +532,8 @@
               class="img-fluid br-8">
             <div class="event-content py-3">
               <h3>SemiconIndia 2023 - Catalyzing India’s Semiconductor Ecosystem</h3>
-              <p>July 28 - July 30, 2023</p>
-              <p>Gandhinagar, Gujarat</p>
+              <p><span class=""><img src="images/icons/calendar_icon.png" alt="" style="height:30px; width:30px;margin-right: 10px;"></span>July 28 - July 30, 2023</p>
+              <p><span class=""><img src="images/icons/location_icon.png" alt="" style="height:30px; width:30px;margin-right: 10px;"></span>Gandhinagar, Gujarat</p>
             </div>
           </div>
         </div>
