--- a/index.html
+++ b/index.html
@@ -275,21 +275,21 @@
           </ul>
         </div>
       </div>
-      <div class="row">
+      <div class="row pt-5">
         <div class="tab-content" id="pills-tabContent">
           <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="thumbnail-container"><img src="./images/about_us.png" alt=""
+                <div class="scheme-thumbnail-container"><img src="./images/semiconductor_scheme.webp" alt=""
                     style="width: 100%;height: 348px;">
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="thumbnail-container">
-                  <div class="bg-primary-aqua pt-2 pb-1 px-3 br-8 mb-3">
+                <div class="scheme-thumbnail-container">
+                  <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
                     <p class="inner-heading">Semiconductor Fab</p>
                   </div>
-                  <p>The Scheme for setting up of Semiconductor Fabs in India shall extend fiscal support of up to 50%
+                  <p class="px-4">The Scheme for setting up of Semiconductor Fabs in India shall extend fiscal support of up to 50%
                     of
                     project cost on pari-passu basis to the approved applicants. The scheme shall be appraised by the
                     Expenditure Finance Committee chaired by Secretary, Department of Expenditure. The Expenditure
@@ -297,6 +297,10 @@
                     Committee shall determine the structure and quantum of fiscal support under the scheme for
                     establishing
                     the semiconductor fabs.</p>
+                    <div class="text-right">
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                        src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
+                    </div>
                 </div>
               </div>
             </div>
@@ -304,20 +308,25 @@
           <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="thumbnail-container"><img src="./images/about_us.png" alt=""
+                <div class="scheme-thumbnail-container"><img src="./images/display_scheme.webp" alt=""
                     style="width: 100%;height: 348px;">
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="thumbnail-container">
-                  <div class="bg-primary-aqua pt-2 pb-1 px-3 br-8 mb-3">
+                <div class="scheme-thumbnail-container">
+                  <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
                     <p class="inner-heading">Display Fab</p>
                   </div>
-                  <p>The Scheme for setting up of Display Fabs in India shall extend fiscal support of up to 50% of
+                  <p class="px-4">The Scheme for setting up of Display Fabs in India shall extend fiscal support of up to 50% of
                     project cost on pari-passu basis to the approved applicants. The scheme shall be appraised by the
                     Expenditure Finance Committee chaired by Secretary, Department of Expenditure. The Expenditure
                     Finance Committee shall determine the structure and quantum of fiscal support under the scheme for
                     establishing the display fabs.</p>
+                    <div class="text-right">
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                        src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
+                    </div>
+                   
                 </div>
               </div>
             </div>
@@ -325,39 +334,48 @@
           <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="thumbnail-container"><img src="./images/about_us.png" alt=""
+                <div class="scheme-thumbnail-container"><img src="./images/compound_scheme.webp" alt=""
                     style="width: 100%;height: 348px;">
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="thumbnail-container">
-                  <div class="bg-primary-aqua pt-2 pb-1 px-3 br-8 mb-3">
+                <div class="scheme-thumbnail-container">
+                  <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
                     <p class="inner-heading">Compound Semiconductor & Semiconductor ATMP</p>
                   </div>
-                  <p>The Scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors (including MEMS)
+                  <p class="px-4">The Scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors (including MEMS)
                     Fabs / Discrete Semiconductors Fab and Semiconductor ATMP / OSAT facilities in India shall extend
                     fiscal support of 50% of capital expenditure to Compound Semiconductors / Silicon Photonics /
                     Sensors (including MEMS) Fabs and Semiconductor Packaging (ATMP / OSAT) units.</p>
+                    <div class="text-right">
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                        src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
+                    </div>
                 </div>
+
               </div>
             </div>
           </div>
           <div class="tab-pane fade" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="thumbnail-container"><img src="./images/about_us.png" alt=""
+                <div class="scheme-thumbnail-container"><img src="./images/design_scheme.webp" alt=""
                     style="width: 100%;height: 348px;">
                 </div>
               </div>
               <div class="col-sm-6">
-                <div class="thumbnail-container">
-                  <div class="bg-primary-aqua pt-2 pb-1 px-3 br-8 mb-3">
+                <div class="scheme-thumbnail-container">
+                  <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
                     <p class="inner-heading">Design Linked Incentive (DLI)</p>
                   </div>
-                  <p>The Design Linked Incentive (DLI) Scheme aims to offer financial incentives as well as design
+                  <p class="px-4">The Design Linked Incentive (DLI) Scheme aims to offer financial incentives as well as design
                     infrastructure support across various stages of development and deployment of semiconductor
                     design(s) for Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and
                     semiconductor linked design(s) over a period of 5 years.</p>
+                    <div class="text-right">
+                      <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
+                        src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
+                    </div>
                 </div>
               </div>
             </div>
