--- a/useful-links.html
+++ b/useful-links.html
@@ -92,7 +92,7 @@
               <a class="dropdown-item" href="#">Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
-              <a class="dropdown-item" href="#">Advisory Committee</a>
+              <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
             </div>
           </li>
@@ -148,9 +148,12 @@
       </div>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
       </div>
     </nav>
   </header>
@@ -166,61 +169,88 @@
   </section>
 
   <section class="about_section p-5">
-    
-    <div class="container-fluid">
+
+    <div class="container">
+
       <div>
         <p class="sub-heading">Semicon India</p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.semiconindia.org/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/semiiconIndia.svg">
+              <div class="caption">https://www.semiconindia.org</div>
+            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.futuredesign.semiconindia.org/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/future_design.png">
+              <div class="caption">https://www.futuredesign.semiconindia.org/</div>
+            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://chips-dli.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/Screenshot 2024-11-18 142438.png">
+              <div class="caption">https://chips-dli.gov.in/</div>
+            </a></div>
+        </div>
       </div>
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
+      <div>
+        <p class="sub-heading my-4">MEITY </p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.meity.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/meity-logo-2.png">
+              <div class="caption">https://www.meity.gov.in/</div>
+            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://dic.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/digitalindia.svg">
+              <div class="caption">https://dic.gov.in/</div>
+            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.mygov.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/mygov.svg">
+              <div class="caption">https://www.mygov.in/</div>
+            </a></div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://negd.gov.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/negd.png">
+              <div class="caption">https://negd.gov.in/</div>
+            </a></div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.meity.gov.in/esdm/pli/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/pli.svg">
+              <div class="caption">https://www.meity.gov.in/esdm/pli/</div>
+            </a></div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.cdac.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/cdac-logo.png">
+              <div class="caption">https://www.cdac.in/</div>
+            </a></div>
         </div>
       </div>
       <div>
-        <p class="sub-heading">Meity</p>
-      </div>
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
+        <p class="sub-heading my-4">Others</p>
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.iesaonline.org/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/iesa_logo.png">
+              <div class="caption">https://www.iesaonline.org/</div>
+            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.icea.org.in/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/icea.jpg">
+              <div class="caption">https://www.icea.org.in/</div>
+            </a></div>
+          <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://elcina.com/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/1689488297_86e6d2b9-45ab-4bb2-91b0-e5a44bbfd875.jpg">
+              <div class="caption">https://elcina.com/</div>
+            </a></div>
+            <div class="col-12 col-md-6 col-lg-4 col-xl-3 col-xxl-3 col-xxll-3"><a class="ism-elem7__box logo-box"
+              href="https://www.ifciltd.com/" target="_blank"><img alt="logo" class="img-fluid"
+                src="./images/logos/ifci-logo-2.png">
+              <div class="caption">https://www.ifciltd.com/</div>
+            </a></div>
         </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>        
-      </div>
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>        
-      </div>
-      <div>
-        <p class="sub-heading">Others</p>
-      </div>
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        
       </div>
     </div>
   </section>
@@ -251,10 +281,14 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
+                  alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
+                  alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                  alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
