--- a/about-us.html
+++ b/about-us.html
@@ -88,11 +88,10 @@
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
-              <a class="dropdown-item" href="#">Vision</a>
-              <a class="dropdown-item" href="#">Objectives</a>
+              <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
-              <a class="dropdown-item" href="#">Advisory Committee</a>
+              <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
             </div>
           </li>
@@ -165,11 +164,11 @@
     </div>
   </section>
 
-  <section class="about_section p-5">
+  <section class="p-5">
     <div class="container-fluid">
       <div class="row">
         <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism.webp" alt=""></div>
+          <div class=""><img src="./images/about-ism/about-ism.webp" alt=""></div>
         </div>
         <div class="col-sm-6 p-5">
           <div class="">
