--- a/ism-commitee.html
+++ b/ism-commitee.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/about-us.css">
+  <link rel="stylesheet" href="./css/pages/ism-commitee.css">
 </head>
 
 <body>
@@ -88,11 +88,10 @@
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
-              <a class="dropdown-item" href="#">Vision</a>
-              <a class="dropdown-item" href="#">Objectives</a>
+              <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
-              <a class="dropdown-item" href="#">Advisory Committee</a>
+              <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
             </div>
           </li>
@@ -148,9 +147,12 @@
       </div>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
       </div>
     </nav>
   </header>
@@ -167,19 +169,75 @@
 
   <section class="about_section p-5">
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism.webp" alt=""></div>
-        </div>
-        <div class="col-sm-6 p-5">
-          <div class="">
-            <p>India Semiconductor Mission (ISM) is a specialized and independent Business Division within the Digital
-              India Corporation that aims to build a vibrant semiconductor and display ecosystem to enable India’s
-              emergence as a global hub for electronics manufacturing and design. Led by global experts of the
-              Semiconductor and display ecosystem the mission aims to serve as a focal point for the comprehensive,
-              coherent, efficient, and smooth deployment of the Program for Development of Semiconductor and Display
-              Ecosystem in consultation with the Government ministries / departments / agencies, industry, and academia.
-            </p>
+      <div>
+        <!-- <p class="sub-heading my-4">Representatives from the Academia</p> -->
+        <div class="row">
+          <div class="col-6">
+            <div class="col-12">
+              <div class="ism-cards">
+                <div class="ism-cards_box">
+                  <div class="ism-cards_content">
+                    <div class="ism-cards_content_title">Minister of Electronics and Information Technology </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="ism-cards v4">
+                <div class="ism-cards_box">
+                  <div class="ism-cards_content">
+                    <div class="ism-cards_content_title">Digital India Corporation</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="ism-cards v4">
+                <div class="ism-cards_box">
+                  <div class="ism-cards_content">
+                    <div class="ism-cards_content_title">India Semiconductor Mission</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="table-responsive">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <td>1.</td>
+                    <td>Secretary, MeitY</td>
+                    <td>Chairman</td>
+                  </tr>
+                  <tr>
+                    <td>2.</td>
+                    <td>Financial Advisor, MeitY</td>
+                    <td>Member</td>
+                  </tr>
+                  <tr>
+                    <td>3.</td>
+                    <td>Joint Secretary (Electronics), MeitY</td>
+                    <td>Member</td>
+                  </tr>
+                  <tr>
+                    <td>4.</td>
+                    <td>Representative of Industry</td>
+                    <td>Member</td>
+                  </tr>
+                  <tr>
+                    <td>5.</td>
+                    <td>CEO, ISM</td>
+                    <td>Member</td>
+                  </tr>
+                  <tr>
+                    <td>6.</td>
+                    <td>Additional CEO, ISM</td>
+                    <td>Member Secretary &amp; Convenor</td>
+                  </tr>
+                </tbody>
+              </table>
+              </div>
           </div>
         </div>
       </div>
@@ -212,10 +270,14 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
+                  alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
+                  alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                  alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
