--- a/ism-vision.html
+++ b/ism-vision.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/style.css">
-  <link rel="stylesheet" href="./css/pages/about-us.css">
+  <link rel="stylesheet" href="./css/pages/ism-vision.css">
 </head>
 
 <body>
@@ -88,11 +88,10 @@
               <a class="dropdown-item" href="#">Our Ministers</a>
               <a class="dropdown-item" href="/about-us.html">About ISM</a>
               <a class="dropdown-item" href="#">About SemiconIndia Programme</a>
-              <a class="dropdown-item" href="#">Vision</a>
-              <a class="dropdown-item" href="#">Objectives</a>
+              <a class="dropdown-item" href="/ism-vision.html">ISM Vision and Objectives</a>
               <a class="dropdown-item" href="/our-team.html">ISM Team</a>
               <a class="dropdown-item" href="#">ISM Committee</a>
-              <a class="dropdown-item" href="#">Advisory Committee</a>
+              <a class="dropdown-item" href="/advisory-commitee.html">Advisory Committee</a>
               <a class="dropdown-item" href="#">Useful Links</a>
             </div>
           </li>
@@ -148,9 +147,12 @@
       </div>
       <div class="social-part">
         <a href="https://x.com/Semicon_India"><img src="/images/header/x_header_icon.png" alt=""></a>
-        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png" alt=""></a>
-        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="/images/header/linkedin_header_icon.png" alt=""></a>
-        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png" alt=""></a>
+        <a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="/images/header/insta_header_icon.png"
+            alt=""></a>
+        <a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+            src="/images/header/linkedin_header_icon.png" alt=""></a>
+        <a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="/images/header/youtube_header_icon.png"
+            alt=""></a>
       </div>
     </nav>
   </header>
@@ -165,164 +167,154 @@
     </div>
   </section>
 
-  <section class="about_section p-5">
+  <section class="p-5">
     <div class="container-fluid">
       <div class="row">
-        <div class="col">
-          <p class="main-heading">ISM’s</p>
+        <div class="col-sm-6 align-content-center">
+          <div>
+            <p class="main-heading">ISM’s</p>
           <p class="sub-heading">Vision</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">
+          </div>
           <div class="">
-            <p>The vision of ISM is to build a vibrant semiconductor and display design and innovation ecosystem to enable India’s emergence as a global hub for electronics manufacturing and design in a more structured, focused, and comprehensive manner through various mechanisms.
+            <p>The vision of ISM is to build a vibrant semiconductor and display design and innovation ecosystem to
+              enable India’s emergence as a global hub for electronics manufacturing and design in a more structured,
+              focused, and comprehensive manner through various mechanisms.
             </p>
-          </div>          
+          </div>
         </div>
         <div class="col-sm-6">
-          <div class=""><img src="./images/about-ism.webp" alt=""></div>
+          <div class=""><img src="./images/about-ism/ism-vision.webp" alt=""></div>
         </div>
       </div>
     </div>
   </section>
   <section class="scheme-section p-5">
     <div class="container-fluid bg-primary-aqua br-8">
-      <div class="row justify-content-between">
-        <div class="col-2">
+      <div class="row">
+        <div class="col-4">
           <p class="main-heading"><span><img src="images/icons/schemes_icon.png"></span>Our</p>
           <p class="sub-heading">Objectives</p>
         </div>
-        <div class="col-9">
+        <div class="col-8 justify-items-ends">
           <ul class="nav nav-pills" id="pills-tab" role="tablist">
             <li class="nav-item nav-buttons" role="presentation">
-              <button class="nav-link active" id="pills-home-tab" data-bs-toggle="pill" data-bs-target="#pills-home"
-                type="button" role="tab" aria-controls="pills-home" aria-selected="true">Strategy</button>
+              <button class="nav-link active" id="pills-strategy-tab" data-bs-toggle="pill"
+                data-bs-target="#pills-strategy" type="button" role="tab" aria-controls="pills-strategy"
+                aria-selected="true">Strategy</button>
             </li>
             <li class="nav-item nav-buttons" role="presentation">
-              <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile"
-                type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Supply Chain</button>
+              <button class="nav-link" id="pills-supply-tab" data-bs-toggle="pill" data-bs-target="#pills-supply"
+                type="button" role="tab" aria-controls="pills-supply" aria-selected="false">Supply Chain</button>
             </li>
             <li class="nav-item nav-buttons" role="presentation">
-              <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill" data-bs-target="#pills-contact"
-                type="button" role="tab" aria-controls="pills-contact" aria-selected="false">Design & Start up</button>
+              <button class="nav-link" id="pills-design-tab" data-bs-toggle="pill" data-bs-target="#pills-design"
+                type="button" role="tab" aria-controls="pills-design" aria-selected="false">Design & Start up</button>
             </li>
             <li class="nav-item nav-buttons" role="presentation">
-              <button class="nav-link" id="pills-about-tab" data-bs-toggle="pill" data-bs-target="#pills-about"
-                type="button" role="tab" aria-controls="pills-about" aria-selected="false">Intellectual Property</button>
+              <button class="nav-link" id="pills-intellectual-tab" data-bs-toggle="pill"
+                data-bs-target="#pills-intellectual" type="button" role="tab" aria-controls="pills-intellectual"
+                aria-selected="false">Intellectual Property</button>
             </li>
             <li class="nav-item nav-buttons" role="presentation">
-              <button class="nav-link" id="pills-about-tab" data-bs-toggle="pill" data-bs-target="#pills-about"
-                type="button" role="tab" aria-controls="pills-about" aria-selected="false">Partnership</button>
+              <button class="nav-link" id="pills-partnership-tab" data-bs-toggle="pill"
+                data-bs-target="#pills-partnership" type="button" role="tab" aria-controls="pills-partnership"
+                aria-selected="false">Partnership</button>
             </li>
           </ul>
         </div>
       </div>
       <div class="row pt-5">
         <div class="tab-content" id="pills-tabContent">
-          <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
+          <div class="tab-pane fade show active" id="pills-strategy" role="tabpanel"
+            aria-labelledby="pills-strategy-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="scheme-thumbnail-container"><img src="./images/semiconductor_scheme.webp" alt=""
-                    style="width: 100%;height: 348px;">
+                <div class="scheme-thumbnail-container"><img src="./images/about-ism/strategy.webp" alt="">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="scheme-thumbnail-container">
                   <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
-                    <p class="inner-heading">Semiconductor Fab</p>
+                    <p class="inner-heading">Strategy</p>
                   </div>
-                  <p class="px-4">The Scheme for setting up of Semiconductor Fabs in India shall extend fiscal support
-                    of up to 50%
-                    of
-                    project cost on pari-passu basis to the approved applicants. The scheme shall be appraised by the
-                    Expenditure Finance Committee chaired by Secretary, Department of Expenditure. The Expenditure
-                    Finance
-                    Committee shall determine the structure and quantum of fiscal support under the scheme for
-                    establishing
-                    the semiconductor fabs.</p>
-                  <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
-                          src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
-                  </div>
+                  <p class="px-4">Formulation of a comprehensive long-term strategy for developing semiconductors &
+                    display manufacturing facilities and semiconductor design ecosystem in the country in consultation
+                    with Government ministries / departments / agencies, industry, and academia.</p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+          <div class="tab-pane fade" id="pills-supply" role="tabpanel" aria-labelledby="pills-supply-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="scheme-thumbnail-container"><img src="./images/display_scheme.webp" alt=""
-                    style="width: 100%;height: 348px;">
+                <div class="scheme-thumbnail-container"><img src="./images/about-ism/supply-chain.webp" alt="">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="scheme-thumbnail-container">
                   <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
-                    <p class="inner-heading">Display Fab</p>
+                    <p class="inner-heading">Supply Chain</p>
                   </div>
-                  <p class="px-4">The Scheme for setting up of Display Fabs in India shall extend fiscal support of up
-                    to 50% of
-                    project cost on pari-passu basis to the approved applicants. The scheme shall be appraised by the
-                    Expenditure Finance Committee chaired by Secretary, Department of Expenditure. The Expenditure
-                    Finance Committee shall determine the structure and quantum of fiscal support under the scheme for
-                    establishing the display fabs.</p>
-                  <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
-                          src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
-                  </div>
-
+                  <p class="px-4">Facilitation in the adoption of trusted electronics through secure semiconductors and
+                    display supply chain, including raw materials, specialty chemicals, gases, and manufacturing
+                    equipment.
+                  </p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
+          <div class="tab-pane fade" id="pills-design" role="tabpanel" aria-labelledby="pills-design-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="scheme-thumbnail-container"><img src="./images/compound_scheme.webp" alt=""
-                    style="width: 100%;height: 348px;">
+                <div class="scheme-thumbnail-container"><img src="./images/about-ism/design.webp" alt="">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="scheme-thumbnail-container">
                   <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
-                    <p class="inner-heading">Compound Semiconductor & Semiconductor ATMP</p>
+                    <p class="inner-heading">Design & Start up </p>
                   </div>
-                  <p class="px-4">The Scheme for setting up of Compound Semiconductors / Silicon Photonics / Sensors
-                    (including MEMS)
-                    Fabs / Discrete Semiconductors Fab and Semiconductor ATMP / OSAT facilities in India shall extend
-                    fiscal support of 50% of capital expenditure to Compound Semiconductors / Silicon Photonics /
-                    Sensors (including MEMS) Fabs and Semiconductor Packaging (ATMP / OSAT) units.</p>
-                  <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
-                          src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
-                  </div>
+                  <p class="px-4">Enabling a multi-fold growth of Indian semiconductor design industry by providing
+                    requisite support in the form of Electronic Design Automation (EDA) tools, foundry services and
+                    other suitable mechanisms for early-stage start-ups.
+                  </p>
                 </div>
-
               </div>
             </div>
           </div>
-          <div class="tab-pane fade" id="pills-about" role="tabpanel" aria-labelledby="pills-about-tab">
+          <div class="tab-pane fade" id="pills-intellectual" role="tabpanel" aria-labelledby="pills-intellectual-tab">
             <div class="row">
               <div class="col-sm-6">
-                <div class="scheme-thumbnail-container"><img src="./images/design_scheme.webp" alt=""
-                    style="width: 100%;height: 348px;">
+                <div class="scheme-thumbnail-container"><img src="./images/about-ism/intellectual.webp" alt="">
                 </div>
               </div>
               <div class="col-sm-6">
                 <div class="scheme-thumbnail-container">
                   <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
-                    <p class="inner-heading">Design Linked Incentive (DLI)</p>
+                    <p class="inner-heading">Intellectual Property</p>
                   </div>
-                  <p class="px-4">The Design Linked Incentive (DLI) Scheme aims to offer financial incentives as well as
-                    design
-                    infrastructure support across various stages of development and deployment of semiconductor
-                    design(s) for Integrated Circuits (ICs), Chipsets, System on Chips (SoCs), Systems & IP Cores and
-                    semiconductor linked design(s) over a period of 5 years.</p>
-                  <div class="text-right">
-                    <a href="#" target="_blank" class="theme-Btn theme-Btn-dark">View More<span><img
-                          src="./images/arrow-btn_icon.png" alt="" class="ml-3"></span></a>
+                  <p class="px-4">Promoting indigenous Intellectual Property (IP) generation and encourage, enable and
+                    incentivize Transfer of Technologies (ToT).
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="pills-partnership" role="tabpanel" aria-labelledby="pills-partnership-tab">
+            <div class="row">
+              <div class="col-sm-6">
+                <div class="scheme-thumbnail-container"><img src="./images/about-ism/partnership.webp" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6">
+                <div class="scheme-thumbnail-container">
+                  <div class="bg-primary-aqua pt-2 pb-1 px-4 br-8 mb-3">
+                    <p class="inner-heading">Partnership</p>
                   </div>
+                  <p class="px-4">Enabling collaborations and partnership programs with national and international
+                    agencies, industries and institutions for catalysing collaborative research, commercialization and
+                    skill development.
+                  </p>
                 </div>
               </div>
             </div>
@@ -357,10 +349,14 @@
           <h5 class="mb-5">Social Media</h5>
           <ul>
             <li><a href="https://x.com/Semicon_India"><img src="images/footer/twitter_icon.png" alt="">Twitter</a></li>
-            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png" alt="">Youtube</a></li>
-            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png" alt="">Instagram</a></li>
-            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png" alt="">Webcast</a></li>
+            <li><a href="https://www.youtube.com/@IndiaSemiconductorMission"><img src="images/footer/youtube_icon.png"
+                  alt="">Youtube</a></li>
+            <li><a href="https://www.linkedin.com/company/indiasemiconductormission/"><img
+                  src="images/footer/linkedin_icon.png" alt="">LinkedIn</a></li>
+            <li><a href="https://www.instagram.com/ism_indiasemiconductor/"><img src="images/footer/instagram_icon.png"
+                  alt="">Instagram</a></li>
+            <li><a href="https://webcast.gov.in/meity/semiconindia"><img src="images/footer/webcast_icon.png"
+                  alt="">Webcast</a></li>
           </ul>
         </div>
       </div>
@@ -386,17 +382,11 @@
         </div>
       </div>
     </div>
-
   </footer>
   <div>
     <p class="ism-footer-copyright m-0">© Copyright India SemiConductor Mission. All Rights Reserved</p>
   </div>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script> -->
-
 </body>
-
 </html>
